--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,48 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <TextView
-        android:text="Scan a tag"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonPreviousTag"
+            android:layout_weight="1"
+            android:text="Previous"
+            android:onClick="showPreviousTag"
+            android:layout_width="match_parent" />
+
+        <TextView
+            android:text="Scan a tag"
+            android:layout_height="wrap_content"
+            android:id="@+id/currentTag"
+            android:textAlignment="center"
+            android:layout_width="160dp" />
+
+        <Button
+            android:text="Next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonNextTag"
+            android:layout_weight="1"
+            android:onClick="showNextTag" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/textView"
-        android:textAlignment="viewStart"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:padding="10dp" />
+        android:layout_weight="1">
 
-    <ExpandableListView
-        android:id="@+id/expandableListView"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp"
-        android:layout_above="@+id/textView" />
+        <ExpandableListView
+            android:id="@+id/expandableListView"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="0.5dp"
+            android:layout_above="@+id/textView" />
+    </LinearLayout>
 </LinearLayout>
