--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:textStyle="bold"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:textSize="15sp" />
 
     <ExpandableListView
@@ -21,5 +21,4 @@
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp" />
-
 </LinearLayout>
